--- a/beauty-app/src/app/pages/profile/profile.page.html
+++ b/beauty-app/src/app/pages/profile/profile.page.html
@@ -70,4 +70,7 @@
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
+  <ion-button color="light" (click)="clear()" expand="block" fill="outline">
+    <ion-icon name="trash"></ion-icon> Drop data of cache <ion-icon name="trash"></ion-icon>
+  </ion-button>
 </ion-content>
