--- a/beauty-app/src/app/pages/make-body/make-body.page.html
+++ b/beauty-app/src/app/pages/make-body/make-body.page.html
@@ -1,10 +1,16 @@
 <app-header titulo="BeautyLab Plans"></app-header>
 <br>
-
-
+<br>
 <ion-content center text-center>   
+	<object *ngIf="unityUrl" [data]="unityUrl"width="100%" height="100%">
+		<embed [src]="unityUrl" [type]="unityUrl" width="100%" height="100%"/>
+	</object>  
+</ion-content>
+
+
+<!-- <ion-content center text-center>   
   <iframe [src] ="unityUrl" width="380px" height="400px" scrolling="yes" allowfullscreen frameborder=0 style="top: 20px;"></iframe>
-</ion-content>  
+</ion-content>   -->
 
 <!-- <ion-content>
   <ion-grid fixed>
