--- a/beauty-app/src/app/pages/make-body/make-body.page.html
+++ b/beauty-app/src/app/pages/make-body/make-body.page.html
@@ -1,29 +1,20 @@
 <app-header titulo="BeautyLab Plans"></app-header>
-<br>
-<br>
-<ion-content center text-center>   
-	<object *ngIf="unityUrl" [data]="unityUrl" width="100%" height="100%">
+
+
+<ion-content class="text-center">   
+<ion-grid>
+  <ion-row>
+    <ion-col size="12">
+      <br>
+      <ion-text class="text-center" color="light"><h1>Soon enjoy the 3D Experience that Beauty Lab has for you</h1></ion-text>      
+    </ion-col>
+  </ion-row>
+</ion-grid>
+
+
+<!-- 	<object *ngIf="unityUrl" [data]="unityUrl" width="100%" height="100%" style="position: fixed-top;">
 		<embed [src]="unityUrl" [type]="unityUrl" width="100%" height="100%"/>
-	</object>  
+	</object>   -->
 </ion-content>
 
 
-<!-- <ion-content center text-center>   
-  <iframe [src] ="unityUrl" width="380px" height="400px" scrolling="yes" allowfullscreen frameborder=0 style="top: 20px;"></iframe>
-</ion-content>   -->
-
-<!-- <ion-content>
-  <ion-grid fixed>
-    <ion-row>
-      <ion-col size="12">
-        <ion-text color="light">
-          <h2 class="ion-class-center text">Beauty Lab wants to offer you the opportunity of build your body</h2>
-        </ion-text>
-      </ion-col>
-      <ion-col size="12">
-        <ion-button expand="full" (click)="OpenUrl(url,'_blank')">BUILD</ion-button>
-      </ion-col>
-    </ion-row> 
-  </ion-grid>
-</ion-content>
- -->
