--- a/beauty-app/src/app/pages/blog/blog.page.html
+++ b/beauty-app/src/app/pages/blog/blog.page.html
@@ -1,7 +1,8 @@
 <app-header></app-header>
 
 <ion-content>
-    <div class="header">
+    <iframe  src="https://beautylabapp.tumblr.com/" frameborder=0 style="width: 100%; height: 100vh;"></iframe>
+    <!-- <div class="header">
         <div class="avatar">
             <ion-avatar class="avatar">
                 <img [src]="data.blog.avatar[0].url" />
@@ -34,6 +35,5 @@
             </ion-col>
             <ion-col size="0" size-md="2" size-lg="4" ></ion-col>
         </ion-row>
-    </ion-grid>
+    </ion-grid> -->
 </ion-content>
-<!-- <iframe  src="https://beautylabapp.blogspot.com/" frameborder=0 style="width: 100%; height: 100vh;"></iframe> -->
