--- a/beauty-app/src/app/pages/make-body/make-body.page.html
+++ b/beauty-app/src/app/pages/make-body/make-body.page.html
@@ -2,19 +2,19 @@
 
 
 <ion-content class="text-center">   
-<ion-grid>
+<!-- <ion-grid>
   <ion-row>
     <ion-col size="12">
       <br>
       <ion-text class="text-center" color="light"><h1>Soon enjoy the 3D Experience that Beauty Lab has for you</h1></ion-text>      
     </ion-col>
   </ion-row>
-</ion-grid>
+</ion-grid> -->
 
 
-<!-- 	<object *ngIf="unityUrl" [data]="unityUrl" width="100%" height="100%" style="position: fixed-top;">
+  <object *ngIf="unityUrl" [data]="unityUrl" width="100%" height="100%" style="position: fixed-top;">
 		<embed [src]="unityUrl" [type]="unityUrl" width="100%" height="100%"/>
-	</object>   -->
+	</object>  
 </ion-content>
 
 
