modificacion de pantallas

--- a/beauty-app/src/app/pages/blog/blog.page.html
+++ b/beauty-app/src/app/pages/blog/blog.page.html
@@ -1,40 +1,13 @@
 <app-header></app-header>
-
 <ion-content>
-    <iframe *ngIf="frame" src="https://beautylabapp.tumblr.com/" frameborder=0 style="width: 100%; height: 100vh;"></iframe>
-    <app-not-connection *ngIf="!frame"></app-not-connection>
-    <!-- <div class="header">
-        <div class="avatar">
-            <ion-avatar class="avatar">
-                <img [src]="data.blog.avatar[0].url" />
-            </ion-avatar>
-        </div>
-        <div class="button">
-            <ion-button (click)="openTumblr()" size="small" color="light" fill="outline" shape="round">
-                View in Tumblr
-            </ion-button>
-        </div>
-    </div>
-    <ion-grid>
-        <ion-row>
-            <ion-col size="0" size-md="2" size-lg="4" ></ion-col>
-            <ion-col size="12" size-md="8" size-lg="4" >
-                <ion-card *ngFor="let item of data.posts" color="light">
-                    <ion-card-header>
-                        <ion-card-subtitle [innerHtml]="item.date.substring(0, 10)" ></ion-card-subtitle>
-                    </ion-card-header>
-            
-                    <ion-card-content>
-                        <p class="desc">
-                            {{item.summary}}
-                        </p>
-                        <img [src]="item.photos[0].original_size.url"
-                            alt="">
-                                    
-                    </ion-card-content>
-                </ion-card>
-            </ion-col>
-            <ion-col size="0" size-md="2" size-lg="4" ></ion-col>
-        </ion-row>
-    </ion-grid> -->
-</ion-content>
+    <ion-grid fixed>
+          <ion-row>
+              <ion-col size="12">
+                  <ion-text class="text-center" color="ligth"><h1>Coming Soon!!!</h1></ion-text>
+              </ion-col>
+              <ion-col size="12">
+                  <ion-text class="text-center" color="ligth"><h1>Beauty Lab Blog!!!</h1></ion-text>
+              </ion-col>
+          </ion-row>
+      </ion-grid> 
+  </ion-content>
