--- a/beauty-app/src/app/pages/make-body/make-body.page.html
+++ b/beauty-app/src/app/pages/make-body/make-body.page.html
@@ -1,20 +1,16 @@
 <app-header titulo="BeautyLab Plans"></app-header>
 
-
-<ion-content class="text-center">   
-<!-- <ion-grid>
-  <ion-row>
-    <ion-col size="12">
-      <br>
-      <ion-text class="text-center" color="light"><h1>Soon enjoy the 3D Experience that Beauty Lab has for you</h1></ion-text>      
-    </ion-col>
-  </ion-row>
-</ion-grid> -->
-
-
-  <object *ngIf="unityUrl" [data]="unityUrl" width="100%" height="100%" style="position: fixed-top;">
-		<embed [src]="unityUrl" [type]="unityUrl" width="100%" height="100%"/>
-	</object>  
+<ion-content>
+  <ion-grid fixed>
+        <ion-row>
+            <ion-col size="12">
+                <ion-text class="text-center" color="ligth"><h1>Coming Soon!!!</h1></ion-text>
+            </ion-col>
+            <ion-col size="12">
+                <ion-text class="text-center" color="ligth"><h1>Beauty Lab Make Body!!!</h1></ion-text>
+            </ion-col>
+        </ion-row>
+    </ion-grid> 
 </ion-content>
 
 
