--- a/beauty-app/src/app/pages/inicio/inicio.page.html
+++ b/beauty-app/src/app/pages/inicio/inicio.page.html
@@ -29,7 +29,7 @@
     <ion-row>
       <ion-col size="12" size-lg="2" size-md="2"></ion-col>
       <ion-col size="12" size-lg="8" size-md="8">
-        <ion-button color="light" class="btn-home" fill="outline" routerLink="/login">
+        <ion-button color="light" class="btn-home" fill="outline" routerLink="/tabs/home">
           <ion-text color="light">
             <h3>Enter to Beautylab</h3>
           </ion-text>
