--- a/beauty-app/src/app/components/header/header.component.html
+++ b/beauty-app/src/app/components/header/header.component.html
@@ -7,7 +7,7 @@
     </ion-buttons>
     <img routerLink="/tabs/home" src="../../../assets/img/horizontal_logo.png" class="img-header">
     <ion-buttons slot="end">
-      <ion-avatar routerLink="/profile">
+      <ion-avatar (click)="navigate()" >
         <img  class="header-style" [src]="hero.getUser().img_perfil === null ? 'assets/img/no-profile.png' : hero.getDomain() + '/file/profile/' + hero.getUser().img_perfil" class="img-profile">
       </ion-avatar>
       
