--- a/beauty-app/src/app/pages/make-body/make-body.page.html
+++ b/beauty-app/src/app/pages/make-body/make-body.page.html
@@ -1,14 +1,21 @@
-<app-header></app-header>
+<app-header titulo="BeautyLab Plans"></app-header>
+<br>
+
+<!-- <iframe scrolling="yes" frameborder=0 src="http://sassweb.com.co/test/"></iframe> -->
+
 
 <ion-content>
-    <ion-grid fixed>
-          <ion-row>
-              <ion-col size="12">
-                  <ion-text class="text-center" color="ligth"><h1>Coming Soon!!!</h1></ion-text>
-              </ion-col>
-              <ion-col size="12">
-                  <img src="../../../assets/img/model3d.png" alt="">
-              </ion-col>
-          </ion-row>
-      </ion-grid> 
-  </ion-content>
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col size="12">
+        <ion-text color="light">
+          <h2 class="ion-class-center text">Beauty Lab wants to offer you the opportunity of build your body</h2>
+        </ion-text>
+      </ion-col>
+      <ion-col size="12">
+        <ion-button expand="full" onclick="window.open('http://sassweb.com.co/test/','_self', 'location=yes', 'enableViewportScale=yes','presentationstyle=fullscreen','zoom=no',' hardwareback: yes', 'useWideViewPort: yes'); return false;" style="width: 100%;">BUILD</ion-button>
+      </ion-col>
+    </ion-row> 
+  </ion-grid>
+</ion-content>
+
