modificacion de titulo

--- a/beauty-app-ios/src/app/pages/admsocial/admsocial.page.html
+++ b/beauty-app-ios/src/app/pages/admsocial/admsocial.page.html
@@ -4,14 +4,14 @@
       <ion-back-button text="Back" defaultHref="/homeadmin"></ion-back-button>
     </ion-buttons>
 
-    <ion-title>List of reported publications</ion-title>
+    <ion-title>List of Reported Posts</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content fullscreen>
 <ion-list>
   <ion-list-header>
-    Reservations
+    Posts
   </ion-list-header>
 
   <ion-item *ngFor="let data of publications" >
