--- a/beauty-app-ios/src/app/components/post/post.component.html
+++ b/beauty-app-ios/src/app/components/post/post.component.html
@@ -43,8 +43,13 @@
                             </ion-col>
                             <ion-col *ngIf="post.comments.length > 0" size="12" class="box-comm">
                                 <p *ngFor="let comm of post.comments"> <b>{{comm.user.nombres}}</b>
-                                    {{comm.comentario}}<ion-button *ngIf="post.user.id === this.user" (click)="block(comm)" >Block User</ion-button> </p>
-                                    
+                                    <ion-col size="11">
+                                    {{comm.comentario}}
+                                    </ion-col> 
+                                    <ion-col size="1">
+                                    <ion-button size="small" class="block" *ngIf="post.user.id === this.user" (click)="block(comm)" >Block User</ion-button>
+                                    </ion-col> 
+                                </p>
                             </ion-col>
                             <ion-col size="12" class=no-padding>
                                 <div>
