--- a/beauty-app-ios/src/app/pages/tabs/tabs.page.html
+++ b/beauty-app-ios/src/app/pages/tabs/tabs.page.html
@@ -3,9 +3,12 @@
     <ion-tab-button tab="home" (click)="setValue(1)">
       <ion-icon name="home"></ion-icon>
     </ion-tab-button>
-    
     <ion-tab-button tab="social" (click)="setValue(1)">
       <ion-icon name="globe"></ion-icon>
+    </ion-tab-button>
+    <ion-tab-button tab="make-body" (click)="setValue(2)">
+      <img class="tab-logo" src="assets/logo/Gray Logo Bl.png" *ngIf="!iconSocial">
+      <img class="tab-logo" src="assets/logo/Focus Beautylab icon.png" *ngIf="iconSocial">
     </ion-tab-button>
     <ion-tab-button tab="car-shop" (click)="setValue(1)">
       <ion-icon name="cart"></ion-icon>
